# CellTinder

./: .gitignore  pyproject.toml
celltinder/: __init__.py  __main__.py  cell_tinder.py  celltinder_main.py  histogram.py  main.py  main2.py
celltinder/backend/: cell_image_set.py  crop.py  data_loader.py  load_data.py
celltinder/gui/: histo_gui.py  main.py  main_window.py
celltinder/gui/controllers/: cell_control.py  cell_image_control.py  histo_control.py  main_controller.py
celltinder/gui/views/: base_view.py  cell_image_view.py  cell_main_view.py  cell_view_manager.py  celltinder_view_manager.py  histo_main_view.py  histo_view.py  modular_cellview.py
celltinder/gui/views/areas/: bottom_bar_view.py  content_area_view.py  top_bar_view.py
celltinder/gui/views/cell_image_view/: bottom_bar_view.py  cell_view_manager.py
celltinder/gui/views/histogram_view/: controls_view.py  graph_view.py  histo_view_manager.py
celltinder/guis/: cell_crush.py  csv_path_dialog.py  flame_filter.py
celltinder/guis/utilities/: shortcuts.py  widgets_utilities.py
celltinder/guis/views/: cell_view.py  celltinder_view_manager.py  flame_view.py
celltinder/guis/views/histogram_view/: bottom_bar_view.py
tests/backend/: test_cellimageset.py  test_dataloader.py
